--- a/collect-infor-admin/package.json
+++ b/collect-infor-admin/package.json
@@ -1,6 +1,12 @@
 {
   "name": "collect-infor-admin",
-  "version": "0.0.0",
+  "version": "0.1.0",
+  "description": "信息采集系统",
+  "author": {
+    "name": "zhixi",
+    "email": "985840977@qq.com",
+    "url": "https://github.com/zhixi0912/collect-infor"
+  },
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check build-only",
@@ -26,6 +32,7 @@
     "npm-run-all": "^4.1.5",
     "sass": "^1.56.0",
     "typescript": "~4.7.4",
+    "unocss": "0.55.4",
     "vite": "^3.1.8",
     "vue-tsc": "^1.0.8"
   }
