--- a/collect-infor-admin/package.json
+++ b/collect-infor-admin/package.json
@@ -15,6 +15,7 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "3d-earth": "^1.0.8",
     "axios": "^1.2.1",
     "echarts": "^5.4.1",
     "element-plus": "^2.2.20",
@@ -22,18 +23,29 @@
     "path-browserify": "^1.0.1",
     "path-to-regexp": "^6.2.1",
     "pinia": "^2.0.23",
+    "core-js": "^3.6.5",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
     "@types/node": "^16.11.68",
+    "@typescript-eslint/eslint-plugin": "6.5.0",
+    "@typescript-eslint/parser": "6.5.0",
     "@vitejs/plugin-vue": "^3.1.2",
+    "@vue/eslint-config-prettier": "8.0.0",
     "@vue/tsconfig": "^0.1.3",
+    "eslint": "8.48.0",
+    "eslint-plugin-prettier": "5.0.0",
+    "eslint-plugin-vue": "9.17.0",
+    "husky": "8.0.3",
+    "lint-staged": "14.0.1",
     "npm-run-all": "^4.1.5",
+    "prettier": "3.0.3",
     "sass": "^1.56.0",
     "typescript": "~4.7.4",
     "unocss": "0.55.4",
     "vite": "^3.1.8",
+    "vue-eslint-parser": "9.3.1",
     "vue-tsc": "^1.0.8"
   }
 }
