--- a/collect-infor-admin/package.json
+++ b/collect-infor-admin/package.json
@@ -17,13 +17,13 @@
   "dependencies": {
     "3d-earth": "^1.0.8",
     "axios": "^1.2.1",
+    "core-js": "^3.6.5",
     "echarts": "^5.4.1",
     "element-plus": "^2.2.20",
     "font-awesome": "^4.7.0",
     "path-browserify": "^1.0.1",
     "path-to-regexp": "^6.2.1",
     "pinia": "^2.0.23",
-    "core-js": "^3.6.5",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
   },
@@ -43,7 +43,7 @@
     "prettier": "3.0.3",
     "sass": "^1.56.0",
     "typescript": "~4.7.4",
-    "unocss": "0.55.4",
+    "unocss": "^0.55.4",
     "vite": "^3.1.8",
     "vue-eslint-parser": "9.3.1",
     "vue-tsc": "^1.0.8"
